# utec_meetings

./: .config  .gitignore  README.md  credentials.py  main.py  requirements.txt  setup.cfg  zoom_access.py
src/: fetch.py
src/browser/: clickable_elem.py  web_elem.py  web_page.py  writable_elem.py
src/data/: conferences.py
src/intercept/: conference_interceptor.py  wiretap.py
src/page/: app_main_page.py  gmail_login_page.py  landing_page.py  locators.py  zoom_meeting_page.py
src/utec/: event.py
src/utec/api/conference/: __init__.py  conference.py  intercept.py  login.py
src/utec/core/: __init__.py  conference.py  driver.py  fetch.py  get.py  intercept.py  login.py  open.py  progress.py  run.py
src/utec/gui/: display.py  next_job_widget.py  progress_widget.py  update_job.py  window_display.py
