[metadata]
name = utec-meetings
description = utec-meetings
author = me
platforms = unix, linux, osx, cygwin, win32

[options]
packages = 
    utec
install_requires = 
    selenium
    selenium-wire
    webdriver-manager
    pause
    keyboard
    fake-useragent
python_requires = >=3.9
package_dir =
    =src
zip_safe = no