[metadata]
name = utec-scrape
description = utec-scrape
author = me
platforms = unix, linux, osx, cygwin, win32

[options]
packages = 
    utec
install_requires = 
    selenium
    selenium-wire
    webdriver-manager
    keyboard
    loguru
    pyvirtualdisplay
    apscheduler
    pytermgui
python_requires = >=3.9
package_dir =
    =src
zip_safe = no